fix(theme): remove the clear button on all input on ie/edge

--- a/packages/theme/src/theme/_forms.scss
+++ b/packages/theme/src/theme/_forms.scss
@@ -392,3 +392,7 @@ form {
 		line-height: $font-size-base * $line-height-base;
 	}
 }
+
+input::-ms-clear{
+	display: none;
+}
